# SimpleLogger

./: CMakeLists.txt  README.md  SimpleLogger.sln
SimpleLogger/: Appender.cpp  Appender.h  ConfigManager.cpp  ConfigManager.h  DoubleBufferQueue.h  Layout.cpp  Layout.h  Logger.cpp  Logger.h  MemCplus.cpp  MemCplus.h  Object.h  ScopeGuard.h  SimpleLogger.vcxproj  SimpleLogger.vcxproj.filters  SimpleLoggerInt.h  TimeUtil.h  define.h  logger.cfg  main.cpp
conf/: logger.cfg
include/: SimpleLoggerInt.h
src/: Appender.cpp  Appender.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DoubleBufferQueue.h  Layout.cpp  Layout.h  Logger.cpp  Logger.h  MemCplus.cpp  MemCplus.h  Object.h  ScopeGuard.h  TimeUtil.h  define.h
test/: CMakeLists.txt  main.cpp
