#查找指定目录下所有的源文件，并赋值给变量
AUX_SOURCE_DIRECTORY(. SRC_LIST)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_LIBRARY(simplelogger SHARED ${SRC_LIST})
IF (CMAKE_SYSTEM_NAME MATCHES "Windows")  
	ADD_LIBRARY(simplelogger STATIC ${SRC_LIST})
ENDIF()
