SET(SRC_LIST main.cpp)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_EXECUTABLE(main ${SRC_LIST})

#添加链接库,相当于-l
TARGET_LINK_LIBRARIES(main simplelogger)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")  
    TARGET_LINK_LIBRARIES(main pthread)
ENDIF()

